Add Portal and Coins

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Platformer Starter Kit</title>
+    <title>Vivi</title>
     <script src="./lib/phaser.js"></script>
     <script src="./src/Scenes/Load.js"></script>
     <script src="./src/Scenes/Platformer.js"></script>
