--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vivi</title>
     <script src="./lib/phaser.js"></script>
+    <script src="./src/Scenes/menu.js"></script>
+    <script src="./src/Scenes/win.js"></script>
+    <script src="./src/Scenes/lose.js"></script>
     <script src="./src/Scenes/Load.js"></script>
     <script src="./src/Scenes/Platformer.js"></script>
     <script src="./src/main.js"></script>
